# stm32f042_embedded_rust_exampels

./: Cargo.toml  Makefile  README.md  memory.x
.cargo/: config
blink/src/: main.rs
